[gd_scene load_steps=9 format=3 uid="uid://p55ek140umya"]

[ext_resource type="Script" path="res://src/Scenes/Actors/Enemy_Square.gd" id="1_7gjcl"]
[ext_resource type="Texture2D" uid="uid://ccmqpw2m3dmf8" path="res://assets/characters/Square-0001.png" id="1_u5e6v"]
[ext_resource type="Script" path="res://src/Scenes/States_and_Machines/StateMachine.gd" id="3_im5x4"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_States/Square_States/Idle.gd" id="4_q5imn"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_States/Square_States/Move.gd" id="5_x5n6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5022s"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3er13"]
size = Vector2(92, 92)

[sub_resource type="CircleShape2D" id="CircleShape2D_k1hrs"]
radius = 253.018

[node name="Enemy_Square" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_7gjcl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u5e6v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5022s")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_3er13")

[node name="ExplotionRange" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplotionRange"]
shape = SubResource("CircleShape2D_k1hrs")

[node name="ExplotionTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_im5x4")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_q5imn")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_x5n6x")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="ExplotionRange" to="." method="_on_explotion_range_body_entered"]
[connection signal="body_exited" from="ExplotionRange" to="." method="_on_explotion_range_body_exited"]
